# kseqpp

./: .gitignore  CMakeLists.txt  README.md  kseq++.pc.in
benchmark/: CMakeLists.txt  kseq++_bench.cpp
cmake/: kseq++-config.cmake.in
include/kseq++/: config.hpp.in  kseq++.hpp  seqio.hpp
src/: kseq++.h  seqio.h
test/: CMakeLists.txt  Makefile  kseq++_bench.cc  kseq++_test.cc
test/src/: seqio_test.cpp
